paragraph will be added in the html file

--- a/yokesh.html
+++ b/yokesh.html
@@ -1,4 +1,5 @@
-<centre>
+<center>
 <h1>YOKESH HTML PROJECTS</h1>
-</centre>
+</center>
 </hr>
+<p>The Yokesh will be change the code in the visual studio</p>
